--- a/countdown-timer/style.css
+++ b/countdown-timer/style.css
@@ -6,7 +6,7 @@
 }
 body{ 
    background-color: black;
-    /* background-image: url("https://images.unsplash.com/photo-1549534077-1b4f31dd59ea?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
+    background-image: url("https://images.unsplash.com/photo-1549534077-1b4f31dd59ea?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     background-position: center center;
     min-height: 100vh;
